--- a/skin/layout.haml
+++ b/skin/layout.haml
@@ -9,6 +9,7 @@
     %link(rel="alternate" type="application/rss+xml" title="RSS 2.0" href="/feed.xml")
   %body
     #header
-      %a(href='/') Michael Lam
+      %a.header(href='/') Michael Lam
+      %div A journey in web development : JavaScript, C# and Ruby
     #container
       = content
