--- a/skin/public/style.css
+++ b/skin/public/style.css
@@ -2,19 +2,31 @@
   margin: 40px 5%;
   overflow: hidden;
 }
+#header {
+  padding-top: 30px;  
+  margin-left: 70px;
+  font-size: 1.4em;
+  line-height: 1.7em;
+}
+#header a {
+  font-size: 2em;
+  border: 0;
+}
+a.more {
+  padding-top: 10px;
+  font-size: 1.2em;
+text-decoration: underline !important;
+}
 #main {
   float: left;
   width: 65%;
   margin-right: 5%;
   max-width: 800px;
-  position: relative;
-  z-index: 50;
 }
 #sidebar {
   float: left;
   width: 30%;
   position: relative;
-  z-index: 50;
   max-width: 430px;
 }
 .article {
@@ -30,17 +42,9 @@
   padding: 0px 2px;
   background: #fafafa;
   border: 1px solid #fff;
-  -webkit-border-radius: 5px;
-  -moz-border-radius: 5px;
-  border-radius: 5px;
   font-size: 10px;
-  opacity: 0.5;
-  filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=50);
   top: 3px;
   right: 3px;
-  -webkit-transition: opacity 0.1s ease-in-out;
-  -moz-transition: opacity 0.1s ease-in-out;
-  transition: opacity 0.1s ease-in-out;
 }
 .article .snippet .code-link:hover {
   opacity: 0.8;
@@ -71,9 +75,6 @@
   border-radius: 5px;
   background-color: #e5e5e5;
   padding: 5px 8px;
-  -webkit-box-shadow: inset 0px 1px 0px rgba(0,0,0,0.10), inset 0px -1px 0px #fff, inset 0px 2px 2px rgba(100,100,100,0.10);
-  -moz-box-shadow: inset 0px 1px 0px rgba(0,0,0,0.10), inset 0px -1px 0px #fff, inset 0px 2px 2px rgba(100,100,100,0.10);
-  box-shadow: inset 0px 1px 0px rgba(0,0,0,0.10), inset 0px -1px 0px #fff, inset 0px 2px 2px rgba(100,100,100,0.10);
   line-height: 12px;
   color: #999;
   text-shadow: 0px 1px 0px #fff;
@@ -125,15 +126,11 @@
 }
 #sidebar li span {
   border: 1px solid #422100;
-  -webkit-border-radius: 5px;
-  -moz-border-radius: 5px;
-  border-radius: 5px;
   margin-left: 5px;
   padding: 2px 3px;
   font-size: 10px;
   line-height: 10px;
   color: #422100;
-  text-shadow: none;
 }
 #sidebar img {
   float: right;
@@ -155,8 +152,8 @@
   margin-bottom: 10px;
 }
 #main.index h3 {
-  font-size: 24px;
-  line-height: 26px;
+  font-size: 2em;
+  line-height: 1.8em;
 }
 
 pre code {
@@ -168,4 +165,151 @@ pre code {
   overflow: auto;
   margin: 20px 0px;
   clear: both;
+}
+
+
+
+
+* {
+margin:0;
+padding:0
+}
+
+body {
+font:80% Georgia, Helvetica, Verdana, Arial, Sans-serif;
+background-repeat:repeat-x;
+background-color:#fff;
+color:#293a43
+}
+
+p {
+font-family:Georgia,Arial;
+font-size:1.1em;
+font-weight:400;
+color:#000;
+padding-left:0;
+padding-top:15px;
+line-height:1.5em
+}
+
+a {
+color:#333;
+font-weight:400;
+font-style:normal;
+text-decoration:none;
+border-bottom:1px dotted #bbb;
+padding-bottom:1px
+}
+
+a:link {
+color:#333;
+font-weight:400;
+font-style:normal;
+text-decoration:none
+}
+
+a:visited {
+color:#333;
+font-style:normal;
+font-weight:400;
+text-decoration:none;
+padding-bottom:1px;
+border-bottom:1px dotted #bbb
+}
+
+a:hover {
+color:#333;
+font-style:normal;
+border-bottom:1px dotted #bbb;
+}
+
+#main {
+float:left;
+width:610px;
+font-size:1.1em;
+margin-left:0;
+margin-top:0;
+margin-bottom:15px;
+background:transparent;
+padding:0 0 20px
+}
+
+#main a:link {
+color:#333;
+font-weight:400;
+font-style:normal;
+border-bottom:1px dotted #828181
+}
+
+#main a:visited {
+color:#333;
+font-style:normal;
+font-weight:400;
+border-bottom:1px dotted #828181
+}
+
+#main a:hover {
+color:#333;
+font-style:normal;
+}
+
+#main h2 {
+font-family:Georgia, Helvetica, Arial, Sans-serif;
+font-weight:400;
+color:#000;
+line-height:normal;
+letter-spacing:-1px;
+padding-bottom:8px;
+padding-left:0;
+display:block;
+margin:25px 0 0
+}
+
+#main h2 a:link,#main h2 a:visited {
+color:#000;
+border:0
+}
+
+#main h2 a:hover {
+color:#333;
+border:0
+}
+
+#main h3 {
+font-family:Georgia;
+font-size:1.2em;
+font-weight:400;
+color:#0d0d0d;
+padding-top:15px;
+margin-bottom:0;
+margin-top:7px;
+text-align:left
+}
+
+#main h4 {
+font-family:Arial;
+font-size:1.1em;
+font-weight:400;
+color:#777;
+padding-top:0;
+margin-bottom:0
+}
+
+#sidebar p {
+font-size:1.9em;
+font-family:Georgia, Helvetica,Arial, sans-serif;
+letter-spacing:0;
+color:#293A43;
+text-align:left;
+border-top:1px dashed #ddd;
+margin:0 0 10px 12px;
+padding:2px 0 0
+}
+
+#sidebar {
+width:250px;
+padding-right:0;
+line-height:1.5em;
+font-size:1.1em;
+margin:4px 0 15px 10px
 }
