--- a/skin/index.haml
+++ b/skin/index.haml
@@ -9,7 +9,10 @@
       %a.more{href: "/" + article.name} Read more...
 
 #sidebar
-  .bubble
+    %h4
+      Bio
+    I'm a software engineer at 7digital...
+
     %h4
       Articles
     %ul
