--- a/skin/public/style.css
+++ b/skin/public/style.css
@@ -7,6 +7,9 @@
   margin-left: 70px;
   font-size: 1.4em;
   line-height: 1.7em;
+
+  border-bottom: 1px dashed #cccccc;
+width: 950px;
 }
 #header a {
   font-size: 2em;
@@ -280,9 +283,7 @@ font-family:Georgia;
 font-size:1.2em;
 font-weight:400;
 color:#0d0d0d;
-padding-top:15px;
 margin-bottom:0;
-margin-top:7px;
 text-align:left
 }
 
