--- a/skin/layout.haml
+++ b/skin/layout.haml
@@ -10,6 +10,6 @@
   %body
     #header
       %a.header(href='/') Michael Lam
-      %div A journey in web development : JavaScript, C# and Ruby
+      %div A journey in software engineering and web development, mostly using JavaScript, C# and Ruby
     #container
       = content
